--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Смачно і крапка</title>
-        <link rel="stylecheet" href="style.ssc">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
